; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngfix.c_type_char.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngfix.c_type_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [33 x i8] c"!abcdefghijklmnopqrstuvwxyz56789\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"@ABCDEFGHIJKLMNOPQRSTUVWXYZ01234\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i32)* @type_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @type_char(i32 %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = and i32 %4, 32
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = sub nsw i32 %8, 96
  %10 = and i32 %9, 31
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds [33 x i8], [33 x i8]* @.str, i64 0, i64 %11
  %13 = load i8, i8* %12, align 1
  store i8 %13, i8* %2, align 1
  br label %21

14:                                               ; preds = %1
  %15 = load i32, i32* %3, align 4
  %16 = sub nsw i32 %15, 64
  %17 = and i32 %16, 31
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds [33 x i8], [33 x i8]* @.str.1, i64 0, i64 %18
  %20 = load i8, i8* %19, align 1
  store i8 %20, i8* %2, align 1
  br label %21

21:                                               ; preds = %14, %7
  %22 = load i8, i8* %2, align 1
  ret i8 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
